<resources>
    <string name="app_name">PrimaApp</string>
    <string name="action_settings">Settings</string>
    <string name="flag_transition_name">flag transition</string>
    <string name="country">Country</string>
    <string name="country_data_transition">country data transition</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="subregion">Subregion</string>
    <string name="languages">Languages</string>
    <string name="population">Population</string>
    <string name="search_hint">Search by Language or Region</string>
    <string name="no_countries">No Countries found</string>
</resources>
