<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_detail"
>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
    >

        <TextView
                android:id="@+id/tv_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/prima_purple"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/double_distance"
                android:paddingStart="@dimen/double_distance"
                app:layout_constraintWidth_percent="0.5"
                android:paddingEnd="@dimen/standard_distance"
        />

        <TextView
                android:id="@+id/tvCountryName"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_distance"
                app:layout_constraintTop_toBottomOf="@+id/tv_country"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintWidth_percent="0.5"
                android:paddingStart="@dimen/double_distance"
                android:paddingEnd="@dimen/standard_distance"

        />

        <TextView
                android:id="@+id/tv_capital"
                android:text="@string/capital"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/prima_purple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_distance"
                app:layout_constraintTop_toBottomOf="@+id/tvCountryName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingStart="@dimen/double_distance"
                app:layout_constraintWidth_percent="0.5"
                android:paddingEnd="@dimen/standard_distance"
        />

        <TextView
                android:id="@+id/tvCapitalName"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_distance"
                app:layout_constraintTop_toBottomOf="@+id/tv_capital"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingStart="@dimen/double_distance"
                app:layout_constraintWidth_percent="0.5"
                android:paddingEnd="@dimen/standard_distance"
        />

        <TextView
                android:id="@+id/tv_region"
                android:text="@string/region"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/prima_purple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_distance"
                app:layout_constraintTop_toBottomOf="@+id/tvCapitalName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingStart="@dimen/double_distance"
                app:layout_constraintWidth_percent="0.5"
                android:paddingEnd="@dimen/standard_distance"
        />

        <TextView
                android:id="@+id/tvRegionName"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_distance"
                app:layout_constraintTop_toBottomOf="@+id/tv_region"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingStart="@dimen/double_distance"
                app:layout_constraintWidth_percent="0.5"
                android:paddingEnd="@dimen/standard_distance"
        />

        <TextView
                android:id="@+id/tv_population"
                android:text="@string/population"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/prima_purple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_country"
                android:paddingStart="@dimen/standard_distance"
                android:paddingEnd="@dimen/double_distance"
                app:layout_constraintWidth_percent="0.5"

        />

        <TextView
                android:id="@+id/tvPopulation"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_distance"
                app:layout_constraintTop_toBottomOf="@+id/tv_population"
                app:layout_constraintLeft_toRightOf="@id/tvCountryName"
                android:paddingStart="@dimen/standard_distance"
                app:layout_constraintWidth_percent="0.5"
                android:paddingEnd="@dimen/standard_distance"
        />


        <TextView
                android:id="@+id/tv_lang"
                android:text="@string/languages"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/prima_purple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_distance"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_capital"
                app:layout_constraintLeft_toRightOf="@id/tv_capital"
                android:paddingStart="@dimen/standard_distance"
                android:paddingEnd="@dimen/double_distance"
                app:layout_constraintWidth_percent="0.5"

        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rvLanguages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintLeft_toRightOf="@+id/tvCountryName"
                app:layout_constraintTop_toBottomOf="@+id/tv_lang"
                android:paddingEnd="@dimen/double_distance"
                android:paddingStart="@dimen/standard_distance"
        >

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>